Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Referrer_Organsiation__c.field-meta.xml
<CustomField>
    <fullName>NHS_Referrer_Organsiation__c</fullName>
    <label>Third Party Referrer Organisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>