Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Risk_Factor_Details__c.field-meta.xml
<CustomField>
    <fullName>NHS_Risk_Factor_Details__c</fullName>
    <label>Risk Factor Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>