Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_RNA_studies__c.field-meta.xml
<CustomField>
    <fullName>NHS_RNA_studies__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you have experience working on RNA extraction studies?</inlineHelpText>
    <label>RNA extraction studies</label>
    <type>Checkbox</type>
</CustomField>