Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Shielding_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>NHS_Shielding_Confirmation__c</fullName>
    <label>Shielding Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I confirm</fullName>
            </value>
            <value>
                <fullName>I am unable to confirm</fullName>
            </value>
            <value>
                <fullName>I prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>