Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Source__c.field-meta.xml
<CustomField>
    <fullName>NHS_Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access Science Jobs</fullName>
            </value>
            <value>
                <fullName>Biomedical Scientist Jobs</fullName>
            </value>
            <value>
                <fullName>Blue Arrow’s careers site</fullName>
            </value>
            <value>
                <fullName>College careers team or school/college network</fullName>
            </value>
            <value>
                <fullName>CV Library</fullName>
            </value>
            <value>
                <fullName>CW Jobs</fullName>
            </value>
            <value>
                <fullName>CW LEP Growth Hub</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Find a job</fullName>
            </value>
            <value>
                <fullName>Google search</fullName>
            </value>
            <value>
                <fullName>Indeed</fullName>
            </value>
            <value>
                <fullName>Job Centre Plus</fullName>
            </value>
            <value>
                <fullName>Jobserve</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Lorien’s careers site</fullName>
            </value>
            <value>
                <fullName>National Careers Service pre-application session</fullName>
            </value>
            <value>
                <fullName>New Scientist Jobs</fullName>
            </value>
            <value>
                <fullName>NHS Trace Laboratory Jobs website</fullName>
                <label>NHS Laboratory Jobs website</label>
            </value>
            <value>
                <fullName>Plymouth University job portal</fullName>
            </value>
            <value>
                <fullName>Reed</fullName>
            </value>
            <value>
                <fullName>Referred by a Friend</fullName>
            </value>
            <value>
                <fullName>Referred by a Lighthouse Lab</fullName>
            </value>
            <value>
                <fullName>Referred by Cambridge Lab</fullName>
            </value>
            <value>
                <fullName>Referred by Charnwood Lab</fullName>
            </value>
            <value>
                <fullName>Royal Society of Biology</fullName>
            </value>
            <value>
                <fullName>S1 Jobs</fullName>
            </value>
            <value>
                <fullName>SRG’s careers site</fullName>
            </value>
            <value>
                <fullName>Tate’s careers site</fullName>
            </value>
            <value>
                <fullName>Totaljobs/eMed</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>