Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Source_Other__c.field-meta.xml
<CustomField>
    <fullName>NHS_Source_Other__c</fullName>
    <label>Source Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>