Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_ThirdParty__c.field-meta.xml
<CustomField>
    <fullName>NHS_ThirdParty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referred by Third Party?</label>
    <type>Checkbox</type>
</CustomField>