Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Title__c.field-meta.xml
<CustomField>
    <fullName>NHS_Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dr</fullName>
            </value>
            <value>
                <fullName>Miss</fullName>
            </value>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Mrs</fullName>
            </value>
            <value>
                <fullName>Ms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>