Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>Candidate__r.Owner.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>