Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Phone_App__c.field-meta.xml
<CustomField>
    <fullName>Phone_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone App</label>
    <type>Checkbox</type>
</CustomField>