Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Placement_length_other__c.field-meta.xml
<CustomField>
    <fullName>Placement_length_other__c</fullName>
    <label>Placement length other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>