Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Practical_Examination_Date__c.field-meta.xml
<CustomField>
    <fullName>Practical_Examination_Date__c</fullName>
    <label>Practical Examination Date</label>
    <type>Date</type>
</CustomField>