Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Recently_Acquired_License__c.field-meta.xml
<CustomField>
    <fullName>Recently_Acquired_License__c</fullName>
    <label>Recently Acquired License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPC</fullName>
            </value>
            <value>
                <fullName>Cat C</fullName>
            </value>
            <value>
                <fullName>Cat C+E</fullName>
            </value>
            <value>
                <fullName>Cat C1</fullName>
            </value>
            <value>
                <fullName>Cat C1+E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>