Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/RecruiterBot__c.field-meta.xml
<CustomField>
    <fullName>RecruiterBot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RecruiterBot</label>
    <referenceTo>Recruiterbot__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>