Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Referred_by_DHSC_or_Lab__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_DHSC_or_Lab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referred by DHSC or Lab?</label>
    <type>Checkbox</type>
</CustomField>