Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Referred_by_Friend__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_Friend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referred by Friend?</label>
    <type>Checkbox</type>
</CustomField>