Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Remain_Calm__c.field-meta.xml
<CustomField>
    <fullName>Remain_Calm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remain Calm</label>
    <type>Checkbox</type>
</CustomField>