Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Retail_Environment__c.field-meta.xml
<CustomField>
    <fullName>Retail_Environment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retail Environment</label>
    <type>Checkbox</type>
</CustomField>