Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Right_to_Work__c.field-meta.xml
<CustomField>
    <fullName>Right_to_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you have the right to work in the UK? (a valid UK passport and /or a valid visa)</inlineHelpText>
    <label>Right to Work in the UK</label>
    <type>Checkbox</type>
</CustomField>