Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Royal_Mail_Job__c.field-meta.xml
<CustomField>
    <fullName>Royal_Mail_Job__c</fullName>
    <label>Royal Mail Job</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Postal Sorter</fullName>
            </value>
            <value>
                <fullName>Driver / Delivery Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>