Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Royal_Mail_Locaitons__c.field-meta.xml
<CustomField>
    <fullName>Royal_Mail_Locaitons__c</fullName>
    <label>Royal Mail Locaitons</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Royal_Mail_Job__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manton Wood Industrial Estate, Worksop, S80 2RS</fullName>
            </value>
            <value>
                <fullName>Mill Hill Distribution Park, Peterlee, SR8 2HR</fullName>
            </value>
            <value>
                <fullName>Edinburgh Mailing Centre, Edinburgh, EH11 4YY</fullName>
            </value>
            <value>
                <fullName>Royal Highland Centre, Edinburgh, EH28 8NB</fullName>
            </value>
            <value>
                <fullName>West Lothian</fullName>
            </value>
            <value>
                <fullName>Edinburgh</fullName>
            </value>
            <value>
                <fullName>Falkirk</fullName>
            </value>
            <value>
                <fullName>Fife</fullName>
            </value>
            <value>
                <fullName>Stirling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>