Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Scottish_Personal_Licence__c.field-meta.xml
<CustomField>
    <fullName>Scottish_Personal_Licence__c</fullName>
    <label>Scottish Personal Licence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>