Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Scottish_Rugby_Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Scottish_Rugby_Job_Role__c</fullName>
    <label>Scottish Rugby Job Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting Staff</fullName>
            </value>
            <value>
                <fullName>Supervisor: Food</fullName>
            </value>
            <value>
                <fullName>BOH Supervisor</fullName>
            </value>
            <value>
                <fullName>BOH Porters</fullName>
            </value>
            <value>
                <fullName>Welcome Hosts</fullName>
            </value>
            <value>
                <fullName>Cellar Person</fullName>
            </value>
            <value>
                <fullName>Cloakroom Assistants</fullName>
            </value>
            <value>
                <fullName>Cleaner</fullName>
            </value>
            <value>
                <fullName>Chef</fullName>
            </value>
            <value>
                <fullName>BOH Manager (Scottish Licence Holder)</fullName>
            </value>
            <value>
                <fullName>Bar Manager (Scottish Licence Holder)</fullName>
            </value>
            <value>
                <fullName>Supervisor: Bar (Scottish Licence Holder)</fullName>
            </value>
            <value>
                <fullName>Wine/Drinks Service (Scottish Licence Holder)</fullName>
            </value>
            <value>
                <fullName>Bar Service (Scottish Licence Holder)</fullName>
            </value>
            <value>
                <fullName>Bar Back (No Licence required)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>