Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Scottish_Rugby_Shift__c.field-meta.xml
<CustomField>
    <fullName>Scottish_Rugby_Shift__c</fullName>
    <label>Scottish Rugby Shift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SCOTLAND v ENGLAND | Saturday 5 February, kick-off 4.45pm</fullName>
            </value>
            <value>
                <fullName>SCOTLAND v FRANCE | Saturday 26 February, kick-off 2.15pm</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>