Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Shift_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Shift_Commitment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shift Commitment</label>
    <type>Checkbox</type>
</CustomField>