Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Shift_Patterns__c.field-meta.xml
<CustomField>
    <fullName>Shift_Patterns__c</fullName>
    <label>Shift Patterns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day shift</fullName>
            </value>
            <value>
                <fullName>Night shift (20% pay uplift)</fullName>
                <label>Night shift (pay uplift applies for night shift)</label>
            </value>
            <value>
                <fullName>Either/both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>