Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Tesco_Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Tesco_Job_Role__c</fullName>
    <label>Tesco Job Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shelf Replenisher</fullName>
            </value>
            <value>
                <fullName>FF Merchandiser</fullName>
                <label>F&amp;F Merchandiser</label>
            </value>
            <value>
                <fullName>Team Leader</fullName>
            </value>
            <value>
                <fullName>Traffic Marshal</fullName>
                <label>Car Park Marshal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>