Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Tesco_Locations__c.field-meta.xml
<CustomField>
    <fullName>Tesco_Locations__c</fullName>
    <label>Tesco Location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tesco_Job_Role__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Addlestone Extra, Addlestone</fullName>
            </value>
            <value>
                <fullName>Amersham</fullName>
            </value>
            <value>
                <fullName>Andover Extra, Andover</fullName>
            </value>
            <value>
                <fullName>Barnstaple</fullName>
            </value>
            <value>
                <fullName>Barnstaple Extra, Barnstaple</fullName>
            </value>
            <value>
                <fullName>Barry</fullName>
            </value>
            <value>
                <fullName>Batley Extra, Batley</fullName>
            </value>
            <value>
                <fullName>Berkhamsted Metro, Berkhamsted</fullName>
            </value>
            <value>
                <fullName>Bideford</fullName>
            </value>
            <value>
                <fullName>Bishop Auckland Extra, Bishop Auckland</fullName>
            </value>
            <value>
                <fullName>Blackburn</fullName>
            </value>
            <value>
                <fullName>Blackpool Clifton Extra, Blackpool</fullName>
            </value>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>Bourne</fullName>
            </value>
            <value>
                <fullName>Bradford Extra, Bradford</fullName>
            </value>
            <value>
                <fullName>Bradley Stoke Extra, Bristol</fullName>
            </value>
            <value>
                <fullName>Braintree Great Notley, Braintree</fullName>
            </value>
            <value>
                <fullName>Braintree Market Place, Braintree</fullName>
            </value>
            <value>
                <fullName>Bridgend Extra, Bridgend</fullName>
            </value>
            <value>
                <fullName>Bristol Eastville Extra, Bristol</fullName>
            </value>
            <value>
                <fullName>Brooklands Extra, Weybridge</fullName>
            </value>
            <value>
                <fullName>Burnley Extra, Burley</fullName>
            </value>
            <value>
                <fullName>Bursledon Towers Extra, Southampton</fullName>
            </value>
            <value>
                <fullName>Bury</fullName>
            </value>
            <value>
                <fullName>Cardiff Extra, Cardiff</fullName>
            </value>
            <value>
                <fullName>Carmarthen Extra, Carmarthenshire</fullName>
            </value>
            <value>
                <fullName>Chelmsford Princes Road, Chelmsford</fullName>
            </value>
            <value>
                <fullName>Chelmsford Springfield Road, Chelmsford</fullName>
            </value>
            <value>
                <fullName>Cheshunt</fullName>
            </value>
            <value>
                <fullName>Chorley Extra, Chorley</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>