Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Training_Licence_Level__c.field-meta.xml
<CustomField>
    <fullName>Training_Licence_Level__c</fullName>
    <label>Training Licence Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPC</fullName>
            </value>
            <value>
                <fullName>Cat C1</fullName>
            </value>
            <value>
                <fullName>Cat C1+E</fullName>
            </value>
            <value>
                <fullName>Cat C</fullName>
            </value>
            <value>
                <fullName>Cat C+E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>