Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Unite_Student_Location__c.field-meta.xml
<CustomField>
    <fullName>Unite_Student_Location__c</fullName>
    <label>Unite Student Location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Unite_Student_Role__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aberdeen City Centre</fullName>
            </value>
            <value>
                <fullName>Birmingham City Centre</fullName>
            </value>
            <value>
                <fullName>Bournemouth Town Centre</fullName>
                <isActive>false</isActive>
                <label>Bournemouth Town Centre</label>
            </value>
            <value>
                <fullName>Bristol City Centre</fullName>
            </value>
            <value>
                <fullName>Durham City Centre</fullName>
            </value>
            <value>
                <fullName>Edinburgh City Centre</fullName>
            </value>
            <value>
                <fullName>Gillingham Town Centre</fullName>
            </value>
            <value>
                <fullName>Glasgow City Centre</fullName>
            </value>
            <value>
                <fullName>Leeds City Centre</fullName>
            </value>
            <value>
                <fullName>Liverpool City Centre</fullName>
            </value>
            <value>
                <fullName>London City Centre</fullName>
            </value>
            <value>
                <fullName>Loughborough Town Centre</fullName>
            </value>
            <value>
                <fullName>Manchester City Centre</fullName>
            </value>
            <value>
                <fullName>Newcastle City Centre</fullName>
            </value>
            <value>
                <fullName>Nottingham City Centre</fullName>
            </value>
            <value>
                <fullName>Sheffield City Centre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>