Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Unite_Student_Role__c.field-meta.xml
<CustomField>
    <fullName>Unite_Student_Role__c</fullName>
    <label>Unite Student Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Student Experience Team Member – Days (Shifts between 7am and 11pm)</fullName>
            </value>
            <value>
                <fullName>Student Experience Team Member – Nights (Shifts between 10pm and 7am)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>