Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/University__c.field-meta.xml
<CustomField>
    <fullName>University__c</fullName>
    <label>University</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abertay University</fullName>
            </value>
            <value>
                <fullName>Aberystwyth University</fullName>
            </value>
            <value>
                <fullName>Anglia Ruskin University</fullName>
            </value>
            <value>
                <fullName>Arden University</fullName>
            </value>
            <value>
                <fullName>Aston University</fullName>
            </value>
            <value>
                <fullName>Bangor University</fullName>
            </value>
            <value>
                <fullName>Bath Spa University</fullName>
            </value>
            <value>
                <fullName>Birmingham City University</fullName>
            </value>
            <value>
                <fullName>Bishop Grosseteste University</fullName>
            </value>
            <value>
                <fullName>Bournemouth University</fullName>
            </value>
            <value>
                <fullName>BPP University</fullName>
            </value>
            <value>
                <fullName>Brunel University</fullName>
            </value>
            <value>
                <fullName>Buckinghamshire New University</fullName>
            </value>
            <value>
                <fullName>Canterbury Christ Church University</fullName>
            </value>
            <value>
                <fullName>Cardiff Metropolitan University (formerly University of Wales Institute Cardiff)</fullName>
            </value>
            <value>
                <fullName>Cardiff University</fullName>
            </value>
            <value>
                <fullName>Coventry University</fullName>
            </value>
            <value>
                <fullName>Cranfield University</fullName>
            </value>
            <value>
                <fullName>De Montfort University</fullName>
            </value>
            <value>
                <fullName>Durham University</fullName>
            </value>
            <value>
                <fullName>Edge Hill University</fullName>
            </value>
            <value>
                <fullName>Edinburgh Napier University</fullName>
            </value>
            <value>
                <fullName>Falmouth University</fullName>
            </value>
            <value>
                <fullName>Glasgow Caledonian University</fullName>
            </value>
            <value>
                <fullName>Harper Adams University</fullName>
            </value>
            <value>
                <fullName>Hartpury University</fullName>
            </value>
            <value>
                <fullName>Heriot-Watt University</fullName>
            </value>
            <value>
                <fullName>Imperial College London</fullName>
            </value>
            <value>
                <fullName>Keele University</fullName>
            </value>
            <value>
                <fullName>Kingston University</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>