Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Work_Outside__c.field-meta.xml
<CustomField>
    <fullName>Work_Outside__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Work Outside</label>
    <type>Checkbox</type>
</CustomField>