Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Work_Time__c.field-meta.xml
<CustomField>
    <fullName>Work_Time__c</fullName>
    <label>Work Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full-Time</fullName>
            </value>
            <value>
                <fullName>Part-Time</fullName>
            </value>
            <value>
                <fullName>Either</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>