Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/recordTypes/NHS_Test_and_Trace.recordType-meta.xml
<RecordType>
    <fullName>NHS_Test_and_Trace</fullName>
    <active>true</active>
    <label>NHS Test and Trace</label>
</RecordType>