Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Campaign__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CV_Attached__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Brand__c</columns>
    <columns>Work_Time__c</columns>
    <columns>TownCity__c</columns>
    <columns>Owner_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>